syntax = "proto3";

package kubernetes;

option go_package="protos/protos";

import "generalView.proto";


message HpaName {
  string namespace = 1;
  string name = 2;
}

service HorizontalPodAutoscaler {
  rpc Scale(HpaName) returns (Empty) {}
}
